[project]
name = "lockout-tagout-exercise-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter-ai>=2.31.5",
    "jupyter-server-fileid>=0.9.3",
    "jupyter-server-ydoc>=2.1.0",
    "jupyterlab>=4.4.5",
    "langchain-ollama>=0.3.5",
    "nbclassic>=1.3.1",
    "notebook>=7.4.4",
]
